--- a/demo.Rmd
+++ b/demo.Rmd
@@ -2,7 +2,7 @@
 title: "Introduction to spatial data analysis in R"
 subtitle: "R-Ladies Bangalore"
 author: "Adithi Upadhya"
-date: "3rd July 2022"
+date: "July 2022"
 output:
   html_document:
     code_folding: hide
